Added the header of the landing page

--- a/index.html
+++ b/index.html
@@ -14,7 +14,14 @@
 </head>
 
 <body>
-
+  <div class="container">
+    <header>
+      <h3>.Travel.</h3>
+      <h1>Welcome to Viseu</h1>
+      <h2>The Garden City</h2>
+      <a href="">Learn More</a>
+    </header>
+  </div>
 </body>
 
 </html>
