Added the Footer of the landing page

--- a/index.html
+++ b/index.html
@@ -21,6 +21,34 @@
       <h2>The Garden City</h2>
       <a href="">Learn More</a>
     </header>
+    <footer>
+      <section class="grid">
+        <div>
+          <h3>
+            More about Viseu
+          </h3>
+          <ul>
+            <li><a href="https://visitviseu.pt/" target="_blank">Visit Viseu Website</a></li>
+            <li><a href="https://maps.app.goo.gl/DCNtaJtyUkWC616n6" target="_blank">Viseu</a></li>
+            <li><a href="https://feirasaomateus.pt/" target="_blank">Feira de São Mateus Website</a></li>
+          </ul>
+        </div>
+        <div>
+          <h3>About me</h3>
+          <p>
+            Hi! My name is Marta, born and raised in Viseu. I'm very fond of the city.
+          </p>
+        </div>
+        <div>
+          <h3>About this website</h3>
+          <p>
+            I created this page as part of a project for SheCodes Responsive
+            to develop my coding skills.
+          </p>
+        </div>
+  </div>
+  </section>
+  </footer>
   </div>
 </body>
 
