Added Main section to the landing page

--- a/index.html
+++ b/index.html
@@ -21,16 +21,41 @@
       <h2>The Garden City</h2>
       <a href="">Learn More</a>
     </header>
+    <main>
+      <section class="grid grid-2-columns">
+        <div>
+          <img src="images/Cava_do_Viriato.jpg" alt="Garden in Viseu">
+        </div>
+        <div>
+          <h3>Why Viseu?</h3>
+          <h2>Viseu, City of Viriato</h2>
+          <p>
+            Viseu is a city and municipality in the Centro Region of Portugal and the capital
+            of the district of the same name.
+          </p>
+          <p>
+            The territory of Viseu was populated by a series of cultures including the Romans, Suebs, Visigoths and
+            Moors. During the Roman occupation of Iberia, Viriato (Viriathus), the rebel leader of the Lusitanians, is
+            assumed to
+            have lived for a time in the vicinity.
+          </p>
+          <p>
+            And is considered one of the probable birthplaces of Afonso Henriques, first King of
+            Portugal.
+          </p>
+        </div>
+      </section>
+    </main>
     <footer>
-      <section class="grid">
+      <section class="grid grid-3-columns-first-narrow">
         <div>
           <h3>
             More about Viseu
           </h3>
           <ul>
-            <li><a href="https://visitviseu.pt/" target="_blank">Visit Viseu Website</a></li>
-            <li><a href="https://maps.app.goo.gl/DCNtaJtyUkWC616n6" target="_blank">Viseu</a></li>
-            <li><a href="https://feirasaomateus.pt/" target="_blank">Feira de São Mateus Website</a></li>
+            <li><a href="https://visitviseu.pt/" target="_blank">Visit Viseu</a></li>
+            <li><a href="https://maps.app.goo.gl/DCNtaJtyUkWC616n6" target="_blank">Viseu Map</a></li>
+            <li><a href="https://feirasaomateus.pt/" target="_blank">Feira de São Mateus</a></li>
           </ul>
         </div>
         <div>
