Added cards template

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <main>
       <section class="grid grid-2-columns">
         <div>
-          <img src="images/Cava_do_Viriato.jpg" alt="Garden in Viseu">
+          <img src="images/Cava_do_Viriato.jpg" alt="Garden in Viseu" class="img-responsive">
         </div>
         <div>
           <h3>Why Viseu?</h3>
@@ -43,6 +43,77 @@
             And is considered one of the probable birthplaces of Afonso Henriques, first King of
             Portugal.
           </p>
+        </div>
+      </section>
+      <section class="secondary">
+        <h3 class="text-centered">PLACES TO VISIT</h3>
+        <h2 class="text-centered">My favorite places in Viseu</h2>
+        <div class="grid grid-3-columns">
+          <div class="card">
+            <div class="card-header">
+              <img src="images/sé.jpg" alt="Sé de Viseu" class="img-responsive">
+            </div>
+            <div class="card-body">
+              <h4>The 'Sé' of Viseu</h4>
+              <p>
+                The cathedral was first built in the early 12th century and during the 900 years since then has been
+                added
+                to and altered frequently.
+                <br>
+                The Sé was originally connected to the Duke’s palace and the castle.
+              </p>
+              <h5>Adress</h5>
+              <p>
+                Adro Sé, 3500-195 Viseu
+              </p>
+            </div>
+            <div class="card-footer">
+              <a href="https://visitviseu.pt/detalhe-geral.php?tipo=roteiros&elemento=52" class="button"
+                target="_blank">Learn More</a>
+            </div>
+          </div>
+          <div class="card">
+            <div class="card-header">
+              <img src="images/rua-direita.jpg" alt="Rua Direita" class="img-responsive">
+            </div>
+            <div class="card-body">
+              <h4>Rua Direita</h4>
+              <p>
+                Rua Direita has been the main trading street in the city of Viseu for hundreds of years.
+              </p>
+              <h5>Adress</h5>
+              <p>
+                R. Direita, 3500-115 Viseu
+              </p>
+            </div>
+            <div class="card-footer">
+              <a href="https://visitviseu.pt/detalhe-geral.php?tipo=roteiros&elemento=45" class="button"
+                target="_blank">Learn
+                More</a>
+            </div>
+          </div>
+          <div class="card">
+            <div class="card-header">
+              <img src="images/cava-de-viriato-1.jpg" alt="Cava de Viriato" class="img-responsive">
+            </div>
+            <div class="card-body">
+              <h4>Cava de Viriato</h4>
+              <p>
+                The Cava de Viriato is an octagonal area covering 32ha. is one of the most emblematic feats of
+                engineering of the 9-10th centuries on the whole of the Iberian Peninsular. It
+                appears to have had some sort of military purpose but exactly what, we are not sure.
+              </p>
+              <h5>Adress</h5>
+              <p>
+                Av. da Bélgica 5, Viseu
+              </p>
+            </div>
+            <div class="card-footer">
+              <a href="hhttps://visitviseu.pt/detalhe-geral.php?tipo=roteiros&elemento=82" class="button"
+                target="_blank">Learn
+                More</a>
+            </div>
+          </div>
         </div>
       </section>
     </main>
