Added responsive Google Maps embed

--- a/index.html
+++ b/index.html
@@ -50,8 +50,12 @@
         <h2 class="text-centered">My favorite places in Viseu</h2>
         <div class="grid grid-3-columns">
           <div class="card">
-            <div class="card-header">
+            <div class="card-header grid grid-2-columns">
               <img src="images/sé.jpg" alt="Sé de Viseu" class="img-responsive">
+              <iframe class="embed"
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3026.640017022572!2d-7.913623324504327!3d40.65986504080656!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd23364c4bb62319%3A0xc153f59aecd86025!2sS%C3%A9%20Catedral%20de%20Viseu!5e0!3m2!1spt-PT!2spt!4v1721226028945!5m2!1spt-PT!2spt"
+                style="border:0;" allowfullscreen="" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
             <div class="card-body">
               <h4>The 'Sé' of Viseu</h4>
@@ -73,17 +77,25 @@
             </div>
           </div>
           <div class="card">
-            <div class="card-header">
-              <img src="images/rua-direita.jpg" alt="Rua Direita" class="img-responsive">
+            <div class="card-header grid grid-2-columns">
+              <img src="images/fontelo.jpg" alt="Fontelo Park" class="img-responsive">
+              <iframe class="embed"
+                src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d2545.0922841283054!2d-7.902750288559574!3d40.659824584255766!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd233644daea5253%3A0xcaf1217716728d6c!2sMata%20do%20Fontelo!5e0!3m2!1spt-PT!2sus!4v1721226855379!5m2!1spt-PT!2sus"
+                style="border:0;" allowfullscreen="" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
             <div class="card-body">
-              <h4>Rua Direita</h4>
+              <h4>Fontelo Park</h4>
               <p>
-                Rua Direita has been the main trading street in the city of Viseu for hundreds of years.
+                Its origin dates to the 16th century, having been designed by D. Miguel da Silva, and later reformulated
+                by other
+                bishops such as D. Gonçalo Pinheiro, who oversaw making it bigger and putting up walls.
+                <br>
+                One of the biggest attractions of the park is the large family of peacocks that lives here.
               </p>
               <h5>Adress</h5>
               <p>
-                R. Direita, 3500-115 Viseu
+                Av. José Relvas, Viseu, Portugal
               </p>
             </div>
             <div class="card-footer">
@@ -93,15 +105,19 @@
             </div>
           </div>
           <div class="card">
-            <div class="card-header">
+            <div class="card-header grid grid-2-columns">
               <img src="images/cava-de-viriato-1.jpg" alt="Cava de Viriato" class="img-responsive">
+              <iframe class="embed"
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d12105.580145904009!2d-7.923174021661839!3d40.66526410000004!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd23364a4986e6e5%3A0xd208e68e18032fe3!2sViriato!5e0!3m2!1spt-PT!2spt!4v1721226456906!5m2!1spt-PT!2spt"
+                style="border:0;" allowfullscreen="" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
             <div class="card-body">
               <h4>Cava de Viriato</h4>
               <p>
-                The Cava de Viriato is an octagonal area covering 32ha. is one of the most emblematic feats of
+                The Cava de Viriato is an octagonal area covering 32ha. Is one of the most emblematic feats of
                 engineering of the 9-10th centuries on the whole of the Iberian Peninsular. It
-                appears to have had some sort of military purpose but exactly what, we are not sure.
+                appears to have had some sort of military purpose but exactly what no one knows.
               </p>
               <h5>Adress</h5>
               <p>
