Updated Instagram embed container
• to be responsive on all devices

--- a/index.html
+++ b/index.html
@@ -133,10 +133,9 @@
           </div>
         </div>
       </section>
-      <section>
+      <section class="instagram-container">
         <h3 class="text-centered">Gallery</h3>
         <h2 class="text-centered">Photos from Viseu</h2>
-
         <div class="instagram-embed">
           <div class="grid grid-3-columns">
             <blockquote class="instagram-media"
